# webpage_change_detector

./: README.md  pyproject.toml  test2.md  test3.md
src/webpage_change_detector/: __init__.py  main.py
