[project]
name = "webpage-change-detector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hietan", email = "hietan622@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python src/webpage_change_detector/main.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/webpage_change_detector"]
